<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

        <EditText
            android:id="@+id/edtProductCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hntProductCodeProductCode"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/edtProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hntProductName"
            app:layout_constraintTop_toBottomOf="@id/edtProductCode"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/edtUnitPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hntUnitPrice"
            android:inputType="numberDecimal"
            app:layout_constraintTop_toBottomOf="@id/edtProductName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <!-- Trường mới để nhập ImageLink -->
        <EditText
            android:id="@+id/edtImageLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hntImageLink"
            app:layout_constraintTop_toBottomOf="@id/edtUnitPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSave"
            app:layout_constraintTop_toBottomOf="@id/edtImageLink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" />

</androidx.constraintlayout.widget.ConstraintLayout>