<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/imgProduct"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titleProductName"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/imgProduct"
        app:layout_constraintStart_toEndOf="@id/imgProduct"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/txtProductCode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titleProductCode"
        app:layout_constraintTop_toBottomOf="@id/txtProductName"
        app:layout_constraintStart_toStartOf="@id/txtProductName"
        app:layout_constraintEnd_toEndOf="@id/txtProductName"
        android:layout_marginTop="4dp" />

    <TextView
        android:id="@+id/txtUnitPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/titleUnitPrice"
        app:layout_constraintTop_toBottomOf="@id/txtProductCode"
        app:layout_constraintStart_toStartOf="@id/txtProductCode"
        app:layout_constraintEnd_toEndOf="@id/txtProductCode"
        android:layout_marginTop="4dp" />

</androidx.constraintlayout.widget.ConstraintLayout>